--- a/bb/public/index.html
+++ b/bb/public/index.html
@@ -7,10 +7,14 @@
     <meta name="theme-color" content="#000515" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="society for working on services"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
    <script src="./icon.js"></script>
+   
+<script src="https://kit.fontawesome.com/d437169723.js" crossorigin="anonymous"></script>
+   
+   
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -31,7 +35,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Business Point Service Society </title>
   </head>
   <body onload="load_icon()">
 
